# winnodeco

./: Cargo.toml  ExcludedProcesses.txt  README.md  example.config.json  schema.json
.config/: config.json
src/: main.rs
