[package]
name = "winnodeco"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "psapi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4.0"
