[package]
name = "winnodeco"
version = "0.1.0"
edition = "2024"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "psapi", "wincon"] }

[target.'cfg(windows)'.build]
target-os = "windows"

# Hide console window by default
[target.'cfg(windows)'.release]
subsystem = "windows"

[dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "psapi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4.0"
dirs = "5.0"
